--- a/hack/env/vars.env
+++ b/hack/env/vars.env
@@ -1,6 +1,11 @@
 export DROPBOX_PATH='/Invoices'
 
 export FOLDERS_TO_IGNORE='_PRE-2019'
-export FILES_TO_IGNORE='Patients.xlsx:Invoice-Master Template.dotx'
+export FILES_TO_IGNORE='Patients.xlsx:Invoice-Master Template.dotx:Invoice-Master Template Hourly.dotx'
 
-export NAME_EMAIL_PAIRS='Dimitri Koshkin=dimitri.koshkin@gmail.com:Nataliya Koshkina=nataliya.d.koshkina@gmail.com:Olga Rabik=olgas.helpers@gmail.com'
+export NOTIFIER_SENDER_NAME='Invoice Validator Bot'
+export NOTIFIER_SENDER_EMAIL='invoices-notifier@dimitrikoshkin.com'
+export NOTIFIER_NAME_EMAIL_PAIRS='Dimitri Koshkin=dimitri.koshkin@gmail.com:Nataliya Koshkina=nataliya.d.koshkina@gmail.com:Olga Rabik=olgas.helpers@gmail.com'
+
+export NOTIFIER_SENDER_PHONE_NUMBER='+19083328484'
+export NOTIFIER_SMS_PHONE_NUMBERS='+17322787865'
